--- a/WebApp/frontend/package.json
+++ b/WebApp/frontend/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "dev": "webpack --mode development --watch",
-     "build": "webpack --mode production"
-
+    "dev": "webpack --mode development --watch",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +22,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@material-ui/core": "^4.12.4",
     "react-router-dom": "^6.3.0"
   }
 }
