--- a/WebApp/frontend/package.json
+++ b/WebApp/frontend/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@paypal/react-paypal-js": "^7.6.0",
     "@svgr/webpack": "^6.2.1",
     "babel-loader": "^8.2.5",
     "react": "^18.1.0",
