--- a/WebApp/frontend/package.json
+++ b/WebApp/frontend/package.json
@@ -14,11 +14,14 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@hookform/error-message": "^2.0.0",
+    "@hookform/resolvers": "^2.8.8",
     "@paypal/react-paypal-js": "^7.6.0",
     "@svgr/webpack": "^6.2.1",
     "babel-loader": "^8.2.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.30.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
