--- a/WebApp/frontend/package.json
+++ b/WebApp/frontend/package.json
@@ -19,9 +19,11 @@
     "@paypal/react-paypal-js": "^7.6.0",
     "@svgr/webpack": "^6.2.1",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.30.0",
+    "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
@@ -29,7 +31,12 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@material-ui/core": "^4.12.4",
+    "@syncfusion/ej2-react-calendars": "^20.1.52",
+    "react-datepicker": "^4.7.0",
+    "react-datetime-picker": "^3.5.0",
     "react-router-dom": "^6.3.0",
+    "react-time-picker": "^4.5.0",
+    "react-timepicker": "^2.0.2",
     "svg-url-loader": "^7.1.1"
   }
 }
