--- a/WebApp/frontend/package.json
+++ b/WebApp/frontend/package.json
@@ -32,8 +32,11 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@material-ui/core": "^4.12.4",
     "@syncfusion/ej2-react-calendars": "^20.1.52",
+    "google-maps": "^4.3.3",
+    "google-maps-react": "^2.0.6",
     "react-datepicker": "^4.7.0",
     "react-datetime-picker": "^3.5.0",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.3.0",
     "react-time-picker": "^4.5.0",
     "react-timepicker": "^2.0.2",
