--- a/WebApp/frontend/package.json
+++ b/WebApp/frontend/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@syncfusion/ej2-react-calendars": "^20.1.52",
     "google-maps": "^4.3.3",
     "google-maps-react": "^2.0.6",
